[gd_scene load_steps=7 format=3 uid="uid://dlith8vmkidii"]

[ext_resource type="Script" path="res://Scripts/Gameboard Items/ParkingLot2x2.gd" id="1_v8aqn"]
[ext_resource type="Texture2D" uid="uid://ccg2oijuipnex" path="res://Assets/Parking/Parking Lot 2x2.svg" id="2_mlnkt"]
[ext_resource type="Texture2D" uid="uid://c3iwwymu6bpn3" path="res://Assets/Parking/Parking Lot Curtain 1x2 Tile 2 Lane.svg" id="3_x1s1s"]
[ext_resource type="Texture2D" uid="uid://cwfrfv63curhi" path="res://Assets/Parking/Parking Lot Curtain 1x2 Tile 4 Lane.svg" id="4_p7f6p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbk70"]
size = Vector2(6, 116)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ggcvo"]
size = Vector2(16, 116)

[node name="ParkingLot2x2" type="Node2D"]
script = ExtResource("1_v8aqn")

[node name="MainBody" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_mlnkt")

[node name="Curtain" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(200, -100)

[node name="Curtain2Lane" type="Sprite2D" parent="Curtain"]
unique_name_in_owner = true
visible = false
texture = ExtResource("3_x1s1s")

[node name="Curtain4Lane" type="Sprite2D" parent="Curtain"]
unique_name_in_owner = true
visible = false
texture = ExtResource("4_p7f6p")

[node name="CrosswalkHitbox" type="Area2D" parent="Curtain"]
position = Vector2(-5, 0)
collision_layer = 2
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Curtain/CrosswalkHitbox"]
shape = SubResource("RectangleShape2D_rbk70")

[node name="CurtainHitbox" type="Area2D" parent="Curtain" groups=["actual_curtains"]]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Curtain/CurtainHitbox"]
shape = SubResource("RectangleShape2D_ggcvo")

[connection signal="area_entered" from="Curtain/CurtainHitbox" to="." method="_on_curtain_hitbox_area_entered"]
[connection signal="area_exited" from="Curtain/CurtainHitbox" to="." method="_on_curtain_hitbox_area_exited"]
